[package]
name = "douyudm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
color-eyre = "0.6"
fastrand = "1.9"
futures-util = "0.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.26", features = ["full"] }

[dependencies.tokio-tungstenite]
# version = "0.18.0"
git = "https://github.com/kazk/tokio-tungstenite"
branch = "feature/permessage-deflate"
# default-features = false
features = ["deflate", "native-tls"]
